  - Added a new FallbackNarrowphaseDetector which uses FallbackConditions to 
    determine when to use a fallback NarrowphaseDetector rather than the
    primary. This is useful when you want to use the SAT algorithm with the
    ellipse or half ellipse shapes (fallback to GJK on these types). See the
    SingleTypedFallbackCondition and PairwiseTypedFallbackCondition classes.
    
Bug Fixes:
  - Fixed a bug in the Vector2.getAngleBetween method where it would return
    an angle outside the range of [-pi, pi]
  - Fixed a bug in the Gjk algorithm where a near zero vector was not being
    caught, causing a false negative during collision and a false positive
    in the distance method.
  - Fixed some bugs in the JUnit tests (no real effect but still important
    so that future releases do not impact existing functionality)
    
Deprecated:
  - Body.setVelocity and Body.getVelocity have been replaced by
    Body.setLinearVelocity and Body.getLinearVelocity respectively.

Breaking Changes:
    
Other:
  - Many more JUnit tests.
  - Updated license dates to be consistent.
  - Removed the TestBed code.

===============================================================================
Version 3.1.4
===============================================================================
New Features:
  - Added a new feature to the Geometry class for flipping shapes about
    an arbitrary line (defined as an axis and point).
  - Not really a feature, but a createAABB accepting no arguments was added
    to the shape interface for convenience.
    
Bug Fixes:
  - Fixed a bug that was introduced in 3.1.3 where the average center was not
    computed correctly since the vertex indexer was a 1 instead of an i.

Deprecated:

Breaking Changes:
  - The shape, fixture, body, etc ids were updated from string to their UUID
    counter parts for better flexibility.  However, if you were saving or
    doing anything with the ids, that will need to change to something like