@@ -231,6 +231,10 @@ geometry.sliceInvalidTheta=Theta must be greater than zero.
 geometry.halfEllipseInvalidCount=The number of vertices must be greater than or equal to 1.
 geometry.halfEllipseInvalidWidth=The width must be greater than zero.
 geometry.halfEllipseInvalidHeight=The height must be greater than zero.
+geometry.nullMinkowskiSumCircle=The circle cannot be null.
+geometry.nullMinkowskiSumPolygon=The polygon cannot be null.
+geometry.invalidMinkowskiSumRadius=The radius must be greater than zero.
+geometry.invalidMinkowskiSumCount=The vertex count must be greater than zero.
 
 # Interval
 geometry.interval.invalid=The minimum cannot be larger than the maximum.
